--- a/project/PixelAdventure/PixelAdventure.vcxproj
+++ b/project/PixelAdventure/PixelAdventure.vcxproj
@@ -115,6 +115,7 @@
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Character\PixCharacter.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Parts\Background\PixBackground.cpp" />
     <ClCompile Include="Scene\Game\PixSceneGame.cpp" />
@@ -329,6 +330,8 @@
     <Xml Include="App\example\xml\test.xml" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Character\PixCharacter.h" />
+    <ClInclude Include="Common\AnimationInfo.h" />
     <ClInclude Include="Common\PixCommon.h" />
     <ClInclude Include="Common\PixTextureDefine.h" />
     <ClInclude Include="Parts\Background\PixBackground.h" />
