--- a/project/PixelAdventure/PixelAdventure.vcxproj.filters
+++ b/project/PixelAdventure/PixelAdventure.vcxproj.filters
@@ -156,6 +156,9 @@
     <ClCompile Include="Scene\PixScene.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Character\PixCharacter.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Image Include="App\icon.ico">
@@ -849,6 +852,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Character\PixCharacter.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Common\AnimationInfo.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
